# codex

./: .bazelrc  .codespellignore  .codespellrc  .gitattributes  .gitignore  AGENTS.md  BUILD.bazel  CHANGES.md  MODULE.bazel  defs.bzl  flake.nix  justfile  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  workspace_root_test_launcher.bat.tpl  workspace_root_test_launcher.sh.tpl
.codex/environments/: environment.toml
.devcontainer/: Dockerfile.secure  devcontainer.secure.json
.devcontainer/codex-install/: package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/: blob-size-allowlist.txt  dotslash-config.json  dotslash-unsigned-config.json  pull_request_template.md
.github/scripts/: compute-bazel-windows-path.ps1  run-argument-comment-lint-bazel.sh  run-bazel-ci.sh  run-bazel-query-ci.sh  rusty_v8_bazel.py
.github/workflows/: cargo-deny.yml  ci.yml  codespell.yml  rust-ci-full.yml  rust-ci.yml  rust-release.yml  sdk.yml
.github/workflows-disabled/: bazel.yml  cargo-deny.yml  ci.yml  issue-deduplicator.yml  issue-labeler.yml  rust-ci-full.yml  rust-ci.yml  rust-release-argument-comment-lint.yml  rust-release-prepare.yml  rust-release-windows.yml  rust-release-zsh.yml  rust-release.yml  rusty-v8-release.yml  v8-canary.yml
codex-cli/: package.json
codex-cli/scripts/: build_npm_package.py  install_native_deps.py  run_in_container.sh
codex-rs/: BUILD.bazel  Cargo.toml  README.md  clippy.toml  default.nix  deny.toml  rust-toolchain.toml
codex-rs/.cargo/: audit.toml
codex-rs/.config/: nextest.toml
codex-rs/agent-graph-store/: BUILD.bazel  Cargo.toml
codex-rs/agent-identity/: BUILD.bazel  Cargo.toml
codex-rs/agent-identity/src/: lib.rs
codex-rs/analytics/: Cargo.toml
codex-rs/app-server/: BUILD.bazel  Cargo.toml  README.md
codex-rs/app-server-client/: Cargo.toml
codex-rs/app-server-transport/: BUILD.bazel  Cargo.toml
codex-rs/app-server/src/: analytics_utils.rs  app_server_tracing.rs  attestation.rs  bespoke_event_handling.rs  codex_message_processor.rs  command_exec.rs  config_api.rs  config_manager.rs  config_manager_service.rs  config_manager_service_tests.rs  connection_rpc_gate.rs  device_key_api.rs  error_code.rs  extensions.rs  external_agent_config_api.rs  fs_api.rs  fs_watch.rs  in_process.rs  lib.rs  main.rs  mcp_refresh.rs  message_processor.rs  message_processor_tracing_tests.rs  models.rs  outgoing_message.rs  request_processors.rs  request_serialization.rs  skills_watcher.rs  thread_state.rs  thread_status.rs  transport.rs  transport_tests.rs
codex-rs/app-server/src/codex_message_processor/: plugin_app_helpers.rs  plugin_mcp_oauth.rs  plugins.rs  thread_goal_handlers.rs  token_usage_replay.rs
codex-rs/app-server/src/config/: external_agent_config.rs  external_agent_config_tests.rs  mod.rs
codex-rs/app-server/src/message_processor/: tracing_tests.rs
codex-rs/app-server/src/request_processors/: account_processor.rs  apps_processor.rs  catalog_processor.rs  command_exec_processor.rs  command_exec_processor_tests.rs  config_processor.rs  device_key_processor.rs  external_agent_config_processor.rs  feedback_processor.rs  fs_processor.rs  initialize_processor.rs  mcp_processor.rs  plugins.rs  process_exec_processor.rs  remote_control_processor.rs  thread_goal_processor.rs  thread_lifecycle.rs  thread_processor.rs  thread_processor_tests.rs  thread_resume_redaction.rs  thread_summary.rs  token_usage_replay.rs  turn_processor.rs  windows_sandbox_processor.rs
codex-rs/app-server/src/transport/: mod.rs  stdio.rs  unix_socket.rs  unix_socket_tests.rs  websocket.rs
codex-rs/app-server/src/transport/remote_control/: client_tracker.rs  enroll.rs  mod.rs  protocol.rs  tests.rs  websocket.rs
codex-rs/app-server/tests/common/: auth_fixtures.rs  lib.rs  mcp_process.rs  models_cache.rs
codex-rs/app-server/tests/suite/: auth.rs  conversation_summary.rs
codex-rs/app-server/tests/suite/v2/: account.rs  analytics.rs  app_list.rs  collaboration_mode_list.rs  command_exec.rs  compaction.rs  config_rpc.rs  connection_handling_websocket.rs  device_key.rs  dynamic_tools.rs  experimental_api.rs  experimental_feature_list.rs  external_agent_config.rs  fs.rs  hooks_list.rs  marketplace_add.rs  marketplace_remove.rs  marketplace_upgrade.rs  mcp_resource.rs  mcp_server_elicitation.rs  mcp_server_status.rs  mcp_tool.rs  mod.rs  model_list.rs  model_provider_capabilities_read.rs  plugin_install.rs  plugin_list.rs  plugin_read.rs  plugin_share.rs  plugin_uninstall.rs  process_exec.rs  rate_limits.rs  realtime_conversation.rs  remote_control.rs  remote_thread_store.rs  request_permissions.rs  safety_check_downgrade.rs  skills_list.rs  thread_archive.rs  thread_fork.rs  (+14 more)
codex-rs/aws-auth/: BUILD.bazel  Cargo.toml
codex-rs/backend-client/: Cargo.toml
codex-rs/builtin-mcps/: BUILD.bazel  Cargo.toml
codex-rs/builtin-mcps/src/: lib.rs
codex-rs/chatgpt/: Cargo.toml
codex-rs/cli/: Cargo.toml
codex-rs/device-key/: BUILD.bazel  Cargo.toml
codex-rs/device-key/src/: lib.rs  platform.rs
codex-rs/external-agent-migration/: BUILD.bazel  Cargo.toml
codex-rs/external-agent-migration/src/: lib.rs
codex-rs/external-agent-sessions/: BUILD.bazel  Cargo.toml
codex-rs/external-agent-sessions/src/: detect.rs  export.rs  ledger.rs  lib.rs  records.rs
codex-rs/feedback/: Cargo.toml
codex-rs/feedback/src/: lib.rs
codex-rs/memories/mcp/: BUILD.bazel  Cargo.toml
codex-rs/memories/mcp/src/: backend.rs  lib.rs  local.rs  local_tests.rs  schema.rs  server.rs
codex-rs/memories/read/: BUILD.bazel  Cargo.toml
codex-rs/memories/read/src/: citations.rs  citations_tests.rs  lib.rs  metrics.rs  prompts.rs  usage.rs
codex-rs/memories/read/templates/memories/: read_path.md
codex-rs/plugin/: Cargo.toml
codex-rs/plugin/src/: lib.rs  load_outcome.rs
codex-rs/thread-manager-sample/: BUILD.bazel  Cargo.toml  README.md
codex-rs/thread-manager-sample/src/: main.rs
docs/: config.md  install.md
patches/: v8_bazel_rules.patch  v8_source_portability.patch
scripts/: list-bazel-clippy-targets.sh  stage_npm_packages.py  test-remote-env.sh
(+1785 files in other folders)
