[package]
edition.workspace = true
license.workspace = true
name = "codex-plugin"
version.workspace = true

[lib]
doctest = false
name = "codex_plugin"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
codex-config = { workspace = true }
codex-utils-absolute-path = { workspace = true }
codex-utils-plugins = { workspace = true }
thiserror = { workspace = true }
